3.0.1 -> 3.0.2
	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
	- permit multiple "Provides: " lines in rpmrc (#2999).

3.0 -> 3.0.1
	- fix: %verifyscript resurrected (Shing-Gene Yung).
	- fix: % before non-alphabetic non-macro special now passed unscathed.
	- fix: noarch header gets initialized differently.
	- fix: $2 to triggerpostun scripts was wrong
	- fix: --querybypkg in man page should be --filesbypkg
	- fix: optflags not implicitly set to canonical arch value.
	- fix: prefer pgp2.6.3 over pgp5 if both are installed.
	- make sure that rpm-the-package auto-requires glibc.
	- add rpmputtext/rpmgettext to rpm package.
	- fix: non-apache servers need "GET ... HTTP/1.0" by the book.
	- fix: %doc wrongly inherits lang from last entry in %files.
	- resurrect toplevel tar target.
	- spec file removal separate from source removal (Shing-Gene Yung).
	- add rpm prefix to MD5 routines to avoid name conflict on solaris.
	- fix: resurrect -Vp, -Vf and -Vg functionality.
	- colesce query and verify modes.
	- better cpio error message if package contains missing hard links.
	- fix: shared file not skipped when removed.
	- fix: conversion script left off leading underscores.
	- another strtok bites the dust.
	- fix: prevent return code wrap during packagage checking/resigning.
	- permit multiple %lang(xx) markers on elements in %files.
	- permit %lang(xx,yy,zz) constructs --  2 more dead strtoks.
	- fix: --prefix should work properly during package installs.
	- add librpmbuild.a to the file list.

2.94 -> 2.95
	- fix: last update transaction set segfault bug in installer.
	- improved checks for statfs (Tim Mooney).
	- remove inconsistent use of __P((...)) throughout.
	- non-static inline functions caused IRIX cc pain.
	- CPIOERR_CHECK_ERRNO masking caused AIX cc warnings.
	- solaris 2.6+ needs statvfs.
	- check build prerequisites before building from specfile.
	- convert per-system configuration in /etc/rpmrc to macros.

2.93 -> 2.94