@@ -106,9 +106,9 @@ int parseDescription(Spec spec);
 int parseFiles(Spec spec);
 int parsePreamble(Spec spec, int initialPackage);
 int parsePrep(Spec spec);
-int parseRequiresConflicts(Spec spec, Package pkg, char *field,
+int parseRequiresConflicts(Spec spec, Package pkg, const char *field,
 			   int tag, int index);
-int parseProvidesObsoletes(Spec spec, Package pkg, char *field, int tag);
+int parseProvidesObsoletes(Spec spec, Package pkg, const char *field, int tag);
 int parseTrigger(Spec spec, Package pkg, char *field, int tag);
 int parseScript(Spec spec, int parsePart);
 int parseBuildInstallClean(Spec spec, int parsePart);
